instances/instana/core/route-acceptor.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: acceptor
    app.kubernetes.io/name: instana
    app.kubernetes.io/part-of: core
    instana.io/group: service
  name: acceptor
  namespace: instana-core
  annotations:
    argocd.argoproj.io/sync-wave: "230"
    helm.sh/hook-weight: "230"
spec:
  host: ingress-instana.apps.rhacm-gitops.ibmglb.ibm-gtmaa.dev
  port:
    targetPort: 8600
  tls:
    termination: passthrough
  to:
    kind: Service
    name: acceptor
    weight: 100
  wildcardPolicy: None
