instances/instana/core/route-gateway.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/name: instana
    app.kubernetes.io/part-of: core
    instana.io/group: service
  name: gateway
  namespace: instana-core
spec:
  host: unit0-tenant0.apps.rhacm-gitops.ibmglb.ibm-gtmaa.dev
  port:
    targetPort: 8443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
